# binding_affinity_predicting

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci-cd.yml
app/: README.md  streamlit_app.py
binding_affinity_predicting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
binding_affinity_predicting/components/: alchemical_analysis.py  calculation.py  config.py  gromacs_orchestration.py  lambda_optimizer.py  lambda_validator.py  lambda_window.py  leg.py  local_logging.py  process_grads.py  simulation.py  simulation_analyzer.py  simulation_base.py  somd_orchestration.py  stage.py  status_monitor.py  system_prep.py  utils.py  virtual_queue.py
binding_affinity_predicting/data/: config.py  enums.py  schemas.py
binding_affinity_predicting/hpc_cluster/: slurm.py  utils.py  virtual_queue.py
binding_affinity_predicting/schemas/: enums.py
binding_affinity_predicting/simulation/: autocorrelation.py  mdp_parameters.py  parameterise.py  preequilibraiton.py  preequilibration.py  slurm_parameters.py  system_preparation.py  utils.py
components/: analysis.py  calculation.py  config.py  logging.py  simulation.py  simulation_base.py  stage.py  tmp.py  utils.py
scripts/: example_run_complete_sys_prep.py  example_run_preequil_sys_prep.py  example_run_sys_prep.py  run.py
scripts/example_bash_scripts/: lambda.template.mdp
scripts/example_runs/: example_run_calc.py  example_run_complete_sys_prep.py  example_run_fep_with_lambda_optimizing.py  example_run_preequil_sys_prep.py  example_run_workflow.py  run.py  test_run.py
scripts/example_system_for_test/: README.md  bound_preequil.gro  bound_preequil.top  convert_to_gmx.py  generate_restraint.py
scripts/test_run_a3fe/: get_restraints.py  load_somd_sim_data.py  run.py
scripts/test_run_alchemical_analysis_py/: README.md  alchemical_analysis.py  corruptxvg.py  parser_gromacs.py  unixlike.py
tests/: conftest.py  test_file
tests/simulation/: test_parameterise.py
tests/test_files/: data_for_detect_equil.pkl  data_for_mbar.pkl  gradient_data_one_run.pkl  lambda_data.pkl  lambda_windows_data.pkl  ligand.sdf  mbar_data.pkl
workflows/fep_workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+69 files in other folders)
