[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binding_affinity_predicting" 
version = "0.1.0"
description = "workflows to automate docking and free energy calculation"
readme = "README.md"
authors = [
  { name = "Jingjing Huang", email = "jjhuang@example.com" }
]

requires-python = ">=3.9,<3.12"
# production dependencies:
dependencies = [
     "numpy",
     "pandas",
     "scipy",
     "pydantic==2.11.5",
     "ambertools",
     ]

[project.urls]
Repository = "https://github.com/Jay-0520/binding_affinity_predicting"


[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner",
]
docs = [
    "sphinx<7.0.0",
    "sphinx_rtd_theme",
    "numpydoc",
]
dev = [
    "isort>=5.10.0",
    "pytest>=6.1.2",
    "pytest-runner",
    "black",
    "flake8",
    "mypy",
    "pydantic[mypy]",
]

[tool.isort]
profile = "black"
line_length = 100
include_trailing_comma = true
multi_line_output = 3

[tool.black]
line-length = 100
target-version = ['py311']
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
# plugins = ["pydantic.mypy"]
ignore_missing_imports = true


[tool.setuptools.packages.find]
where = ["."]
include = ["binding_affinity_predicting*"]
